# Pocket-TTS-Spokenword-RUS

./: .gitignore  ABOUT.md  README.md  SETUP.md  build.py  build_cli.spec  build_gui.spec  install.bat  install.sh  launch.sh  launch_gui.py  pyproject.toml  start.bat
ASR/: asr_config.json  asr_validator.py  asr_validator.py.20260122_180254  asr_validator.py.backup_20260122_153626  asr_validator.py~  asr_validator_changes.md  requirements.txt  run.sh
assets/: test_voice.wav.placeholder
docs/: benchmark_text.txt  benchmark_text.txt~  test.txt
pocket_tts/: __init__.py  default_parameters.py.backup_20260204_101516  main.py  test_gui.py
pocket_tts/audio/: m4b_converter.py
pocket_tts/audio_processing/: __init__.py
pocket_tts/audiobook/: __init__.py  generator (copy).py  generator.py  generator.py.18  generator.py.20260122_180320  generator.py.backup.20260116_170401  generator.py.backup.20260116_174735  generator.py.backup_20260116_200654  generator.py.backup_20260204_101515  generator.py.backup_20260204_112334  generator.py.backup_pooling_20260121_175040  generator.py.old  generator.py~
pocket_tts/config/: __init__.py  __init__.py.backup_20260116_200655  __init__.py.backup_20260204_110000  __init__.py.backup_20260204_111205  default_config (copy).yaml  default_config.yaml  default_config.yaml.backup_20260122_153626  default_config.yaml.backup_20260204_111206  default_config.yaml~
pocket_tts/data/: audio.py  voice_converter.py
pocket_tts/gui/: __init__.py  main_window.py  main_window.py.backup.20260116_154406  main_window.py.backup.20260116_155306  main_window.py.backup.20260116_162500  main_window.py.backup.20260116_163328  main_window.py.backup.20260116_164131  main_window.py.backup.20260116_174735  main_window.py.backup_20260116_200654  main_window.py.backup_20260122_083539  main_window.py.backup_20260122_153626  main_window.py.backup_20260204_101514  main_window.py.backup_20260204_111205  main_window.py.backup_20260214_090014  main_window.py~  regenerate_tab.py  regenerate_tab.py.backup_20260130_065647  setup_window.py
(+18 files in other folders)
