[project]
name = "pocket-tts"
requires-python = ">= 3.10,<3.14"
description = "Kyutai's pocket-sized TTS!"
version = "1.0.1"
readme = "README.md"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    # I tried 2.4.0 but the generated audio is wrong, so 2.5+ is needed.
    "torch>=2.5.0,<2.10.0",
    "pydantic>=2.12.5",
    "sentencepiece>=0.2.1",
    "beartype>=0.22.9",
    "safetensors>=0.7.0",
    "typer>=0.21.1",
    "typing_extensions>=4.15.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "scipy>=1.15.3",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "requests>=2.32.5",
    # Emotion analysis and audio processing
    "transformers>=4.57.6",
    "librosa>=0.11.0",
    "soundfile>=0.12.0",  # For Silero TTS audio I/O
    "omegaconf>=2.3.0",  # Required by Silero TTS
    # GUI dependencies
    "qtpy>=2.4.3",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "pyyaml>=6.0.3",
    "pyinstaller>=6.18.0",
    "psutil>=7.2.1",
    "aiohttp>=3.13.3",  # For async downloads
]


[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "line-profiler>=5.0.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"
# avoid having a trailing comma changing 
# the behavior of the formatter
skip-magic-trailing-comma = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pocket_tts"]

[project.scripts]
pocket-tts = "pocket_tts.main:cli_app"

[tool.uv]
# System python distribution can have header files missing, so we use only the python
# distributions provided by uv which have everything included.
python-preference = "only-managed"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
